# demo-devops-aws

./: .releaserc  CHANGELOG.md  README.md  app.py  cdk.context.json  cdk.json
.github/workflows/: ci.yaml  deploy.yaml  release.yaml
demo_devops_aws/: demo_devops_aws_stack.py
src/: Dockerfile  README.md  main.py  pyproject.toml
src/models/: inventory.py  users.py
src/routes/: inventory.py  users.py
src/utils/: database.py  exceptions.py  validate_token.py
tests/unit/: test_demo_devops_aws_stack.py
