[tool.poetry]
name = "fastapi-mongodb"
version = "0.1.0"
description = ""
authors = ["Emilio Moreno <emilio@touchof.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
motor = "^3.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
